支付后状态修改未实现

--- a/templates/base.html
+++ b/templates/base.html
@@ -129,7 +129,7 @@
                 </a>
             </li>
             <li><a href="{{ url_for('account.profile') }}">查看个人信息</a></li>
-            <li><a href="#">查看交易历史</a></li>
+            <li><a href="{{ url_for('contract.view_contracts') }}">查看交易历史</a></li>
             <li><a href="{{ url_for('house.view_appointments') }}">查看预约</a></li> <!-- 新增按钮 -->
             
             
